<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DribbbleBackgroundChanger</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="frequency">Enter Frequency(per second)</string>
	<string name="user_name">Enter User Stream Name</string>
	<string name="frequency_hint">enter frequency</string>
	<string name="username_hint">enter username</string>
	<string name="send">Send</string>
	<string name="toggle">Stop background change</string>
	<color name="red">#ff0000</color>
	<string name="warning_message">Resume by connecting to network</string>
</resources>
