<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/userbutton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edituser"
        android:layout_alignParentRight="true"
        android:text="@string/send" />

    <EditText
        android:id="@+id/edituser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv1"
        android:layout_marginTop="34dp"
        android:layout_toLeftOf="@+id/userbutton"
        android:hint="@string/username_hint"
        android:lines="1"
        android:singleLine="true"
        android:ems="10" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv1"
        android:layout_below="@+id/edituser"
        android:layout_marginTop="82dp"
        android:text="@string/frequency" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edituser"
        android:layout_alignParentTop="true"
        android:layout_marginTop="77dp"
        android:text="@string/user_name" />

    <TextView
        android:id="@+id/offline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/tv2"
        android:layout_marginTop="18dp"
        android:text="OFFLINE MODE"
        android:textColor="@color/red"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/offline"
        android:layout_toLeftOf="@+id/userbutton"
        android:text="@string/warning_message" />

    <Button
        android:id="@+id/freqbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/userbutton"
        android:layout_below="@+id/tv2"
        android:layout_marginTop="32dp"
        android:text="@string/send" />

    <EditText
        android:id="@+id/editfreq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/freqbutton"
        android:layout_alignBottom="@+id/freqbutton"
        android:layout_alignLeft="@+id/tv2"
        android:ems="10"
        android:hint="enter frequency"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/msgstats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tv1"
        android:layout_below="@+id/freqbutton"
        android:layout_marginTop="40dp"
         />

</RelativeLayout>